# aktivi

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
.claude/: CLAUDE.md
backend/: Cargo.toml
backend/.sqlx/: query-635e2bf4f35e4d91d64f33dd77c00ffd0b35318298810cbddc78db92f48ae717.json  query-bae43b32371aaa5560f65235fdc4136138aa9e733c7bb28ca2cb9b56559d82d9.json
backend/migrations/: 001_init.sql  002_profiles.sql  003_oatproxy.sql  004_identities.sql
backend/src/: backfill.rs  handle.rs  ingest.rs  jetstream.rs  lib.rs  main.rs  profile.rs
backend/src/oatproxy/: mod.rs  store.rs
backend/src/xrpc/: actor_get_events.rs  actor_get_timeline.rs  event_get_rsv_ps.rs  get_event_view.rs  get_events.rs  get_profile_view.rs  get_rsv_ps.rs  mod.rs  search.rs
frontend/: env.d.ts  index.html  lex.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: client-metadata.json
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: Header.tsx  footer.tsx  ootb-modal.tsx  providers.tsx  theme.tsx
frontend/src/doc/: content-guidelines.md  pp.md  tos.md
frontend/src/lib/: auth-context.tsx  oauth.ts  qt.tsx  use-auth.ts
frontend/src/routes/: __root.tsx  events.create.tsx  events.tsx  index.tsx  legal.content-guidelines.tsx  legal.privacy-policy.tsx  legal.tos.tsx  login.tsx  oauth.callback.tsx  oauth.pre.tsx  user.$handle.tsx
lex/: co.aktivi.actor.defs.json  co.aktivi.actor.getEvents.json  co.aktivi.actor.getProfileView.json  co.aktivi.actor.getRSVPs.json  co.aktivi.actor.getTimeline.json  co.aktivi.actor.profile.json  co.aktivi.event.definitions.json  co.aktivi.event.defs.json  co.aktivi.event.getEventView.json  co.aktivi.event.getEvents.json  co.aktivi.event.getRSVPs.json  co.aktivi.meta.ootb.json  co.aktivi.search.getSearchResults.json  com.example.createRecord.json  com.example.getStatus.json  community.lexicon.calendar.event.json  community.lexicon.calendar.rsvp.json  community.lexicon.location.fsq.json
lex-rs/: Cargo.toml  co_aktivi.rs  com_example.rs  community_lexicon.rs  lib.rs
lex-rs/co_aktivi/: actor.rs  event.rs  meta.rs  search.rs
lex-rs/co_aktivi/actor/: get_events.rs  get_profile_view.rs  get_rsv_ps.rs  get_timeline.rs  profile.rs
lex-rs/co_aktivi/event/: get_event_view.rs  get_events.rs  get_rsv_ps.rs
lex-rs/co_aktivi/meta/: ootb.rs
lex-rs/co_aktivi/search/: get_search_results.rs
lex-rs/com_example/: create_record.rs  get_status.rs
lex-rs/community_lexicon/calendar/: event.rs  rsvp.rs
lex-rs/community_lexicon/location/: address.rs  fsq.rs  geo.rs  hthree.rs
