[package]
name = "aktivi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aktivi"
path = "src/main.rs"

[[bin]]
name = "aktivi-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = {version = "0.8", features = ["json", "macros"]}
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
rocketman = { version = "0.3", features = ["zstd"] }
serde_ipld_dagcbor = "0.6"
chrono = "0.4"
cid = "0.11"
multihash = "0.19"
sha2 = "0.10"
repo-stream = { version = "0.2.2" }
clap = { version = "4", features = ["derive"] }

jacquard = { workspace = true }
jacquard-api = { workspace = true, features = ["community_lexicon"] }
async-trait = "0.1"
jacquard-axum = { workspace = true }
jacquard-common = { workspace = true }
jacquard-identity = { workspace = true }
jacquard-oatproxy = { workspace = true }
jacquard-oauth = { workspace = true }

lex-rs = { path = "../lex-rs" }
jose-jwk = "0.1.2"
p256 = "0.13.2"
rand = "0.8"
dotenvy = "0.15.7"
moka = { version = "0.12", features = ["future"] }
libipld = "0.16.0"
ipld-core = "0.4.2"

[dev-dependencies]
